--- a/interface.html
+++ b/interface.html
@@ -1,7 +1,7 @@
 <div id="app" data-my-widget-id="{{id}}">
   <header>
     <p>
-      Configure your gallery
+      Configure gallery
       <a href="https://help.fliplet.com/gallery-component/" class="help-icon" target="_blank">
         <i class="fa fa-question-circle-o"></i>
       </a>
